Fixed overflow on PGCR main element.

--- a/assets/js/Components/PGCR/style.css
+++ b/assets/js/Components/PGCR/style.css
@@ -114,7 +114,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
+    width: 580px;
     border: 1xp solid var(--crucible-dark-2);
     background-color: var(--grey-dark-4);
     color: var(--vanguard-light-5);
